# model-based-prior

./: .env.example  .gitignore  .gitmodules  README.md  environment-mac.yml  environment.yml  main.py  pyproject.toml  requirements.txt
pretrained_models/: best_model.pth
scripts/: create_plots.py  image_aesthetics_visualizer.py  image_tuning_app.py  run_experiment.sh  synthetic_evaluation.py  thesis_plots.py  train_spq_nn.py
src/modelbasedprior/: logger.py  prior.py
src/modelbasedprior/benchmarking/: __init__.py  database.py  runner.py
src/modelbasedprior/objectives/: __init__.py  ergonomics.py  euclidean_distance.py  image_similarity.py  mr_layout_quality.py  scatterplot_quality.py  semantic_agreement.py  shekel.py  sphere.py
src/modelbasedprior/objectives/human_evaluator/: __init__.py  human_evaluator_objective.py
src/modelbasedprior/objectives/human_evaluator/renderers/: __init__.py  cli_renderer.py
src/modelbasedprior/objectives/image_aesthetics/: __init__.py  domain_transform_filter.py  image_aesthetics.py  test_domain_transform_filter.py
src/modelbasedprior/optimization/: __init__.py  bo.py  human_evaluator.py  pbo.py  prior_sampling.py
src/modelbasedprior/optimization/human_evaluator/: human_evaluator_objective.py
src/modelbasedprior/optimization/human_evaluator/renderers/: cli_renderer.py  human_evaluator_renderer.py
src/modelbasedprior/paper/: illustrative_plots.py  results_plots.py
src/modelbasedprior/visualization/: __init__.py  analysis.py  illustrative_plots.py  results_plots.py  visualization.py
(+9 files in other folders)
